--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ template: splash
 hero:
   tagline: A control center for node operators.
   actions:
-    - text: What is Kittynode?
+    - text: What is L1Beat?
       link: /learn/what-is-kittynode
       icon: right-arrow
     - text: View on GitHub
